Fix card height that overflow the viewport height

--- a/client/app/styles/app/_layout.styl
+++ b/client/app/styles/app/_layout.styl
@@ -19,10 +19,3 @@ avatar(size)
     dl
     dd
         reset()
-
-
-.dialogs
-    @extend $fullbleed
-
-    [role=separator]
-        @extend $fullbleed
