--- a/client/app/styles/components/_card.styl
+++ b/client/app/styles/components/_card.styl
@@ -1,11 +1,7 @@
 .card
+    @extend $dialog
 
-    .wrapper
-        width      100%
-        max-width  em(960px)
-        max-height 90vh
-        @extend    $centerized
-
+    [role=contentinfo]
         display flex
 
         background-color white
