--- a/client/app/styles/components/_drawer.styl
+++ b/client/app/styles/components/_drawer.styl
@@ -1,5 +1,6 @@
 .drawer
-    padded           10px, 20px
+    display flex
+    padded  10px, 20px
 
     background-color grey-01
     border-right     1px solid grey-03
@@ -13,7 +14,7 @@
 
 
     .tools
-        height 100%
+        flex    1
         display flex
         flex-direction column
 
